[dev] Offset, Limit 채팅 레코드 설정